# s3-vector-engine

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.ray  Dockerfile.shard  LICENSE  Makefile  README.md  build.rs  docker-compose.yml  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml
deploy/helm/s3vec/: Chart.yaml  values.yaml
deploy/helm/s3vec/templates/: _helpers.tpl  config.yaml  gateway.yaml  infra.yaml  ray.yaml  shard.yaml
k8s/: config.yaml  gateway.yaml  infra.yaml  namespace.yaml  ray.yaml  shard.yaml
proto/: shard.proto
s3vec/: __init__.py  config.py  coordinator.py  grpc_coordinator.py  indexer.py  main.py  pipeline.py  registry.py  storage.py  worker.py
s3vec/extraction/: __init__.py  audio.py  face.py  feature_uri.py  image.py  text.py  video.py
s3vec/proto/: __init__.py  shard_pb2.py  shard_pb2_grpc.py
s3vec/ray/: __init__.py  datasink.py  pipeline.py  progress.py  serve_config.py
scripts/: benchmark.py  benchmark_load.py  seed.py  test_extraction.py  test_grpc_integration.py  test_pipeline.py
src/: distance.rs  lib.rs  metrics.rs  proto.rs  types.rs
src/index/: bm25.rs  hnsw.rs  mod.rs  payload.rs  pq.rs  sparse.rs
src/search/: filter.rs  fusion.rs  mmr.rs  mod.rs  scorer.rs
src/shard/: engine.rs  mod.rs  server.rs  snapshot.rs
src/wal/: mod.rs  reader.rs  writer.rs
tests/: conftest.py  test_engine.py
