[package]
name = "s3vec-engine"
version = "0.1.0"
edition = "2021"
description = "Rust shard scanner for the S3-native vector engine"

[lib]
name = "_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
