[package]
name = "s3vec-engine"
version = "0.2.0"
edition = "2021"
description = "Rust shard engine for the S3-native multimodal vector data warehouse"

[lib]
name = "_engine"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "shard-server"
path = "src/bin/shard_server.rs"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"

# ANN index
rand = "0.8"
ordered-float = "4"
parking_lot = "0.12"

# BM25 full-text search
tantivy = "0.22"

# Sparse vector index (no extra crate — custom impl)

# Product Quantization (no extra crate — custom impl using rand + rayon)

# Payload storage
rocksdb = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WAL
crc32fast = "1"
bincode = "1"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
memmap2 = "0.9"
tempfile = "3"

# Parallelism
rayon = "1.10"
crossbeam = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"

# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
clap = { version = "4", features = ["derive"] }

# Metrics
prometheus = "0.14"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

[build-dependencies]
tonic-build = "0.12"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
